--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-icons": "^2.2.7",
     "react-responsive": "^1.3.4",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.12"
+    "react-scripts": "1.0.12",
+    "react-sidebar": "^2.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
